Tue Sep  7 07:08:26 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/BorlandProjectCreator.pm:

          As part of the -expand_env option, I moved some functionality out
          of the ProjectCreator.pm and into this module which was only used
          by this project creator.

Tue Sep  7 06:41:27 2004  Chad Elliott  <elliott_c@ociweb.com>

        * include/makeinclude/rules.local.GNU:

          Removed the if check for static_libs_only.  The STATIC_LINK_FLAG
          option will be added to the LDFLAGS if static_link is set to 1.

Mon Sep  6 10:04:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Sock_Connect.cpp:
          When using VxWorks also include OS_NS_stdio.h

Mon Sep  6 07:12:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS.h:
          Removed include of sys/modem.h for HPUX, this is already done in
          os_include/os_termios.h

Fri Sep  3 15:53:19 2004  Steve Huston  <shuston@riverace.com>

        * ace/config-sunos5.8.h: Added ACE_HAS_TIMEZONE. This may be
          pertinent to previous Solaris versions, but I don't have any
          to test on.

Fri Sep  3 12:34:41 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/OS_NS_sys_mman.inl:

          Removed redundant conditional used to disable madvise for WIN32
          systems.  Instead use ACE_LACKS_MADVISE feature test macro.

        * ace/config-win32-common.h:

          Added ACE_LACKS_MADVISE definition.

Fri Sep  3 15:10:22 2004  Steve Huston  <shuston@riverace.com>

        * ace/config-aix-5.x.h: Add ACE_HAS_TIMEZONE.

        * ace/OS_NS_time.h: Include "ace/OS_NS_errno.h" - ACE_NOTSUP_RETURN
          sets errno.

Fri Sep  3 21:36:51 2004  Olli Savia  <ops@iki.fi>

        * apps/drwho/File_Manager.cpp:
          Use ACE_HAS_EXPLICIT_STATIC_TEMPLATE_MEMBER_INSTANTIATION
          to check if explicit template instantiation is needed.