@@ -10,10 +10,7 @@
 #include "ace/Signal.h"
 
 #include "iostream_server.h"
-
-#if defined (ACE_HAS_STRING_CLASS)
-#  include "ace/OS_NS_unistd.h"
-#endif // ACE_HAS_STRING_CLASS 
+#include "ace/OS_NS_unistd.h"
 
 ACE_RCSID(server, iostream_server, "$Id$")
 
